added generic navigation

--- a/dexie.html
+++ b/dexie.html
@@ -6,11 +6,14 @@
     <link href="log.css" rel="stylesheet"/>
     <script src="dexie.js"></script>
     <script src="log.js"></script>
+    <script src="nav.js"></script>
 </head>
 <body>
-<a href="./index.html">< home</a>
+<script type="text/javascript">insertNavigation();</script>
+
 <h1>Dexie.Promise</h1>
 <h3>Log</h3>
+
 </body>
 <script type="text/javascript">
 /*    //
