--- a/zone.js.html
+++ b/zone.js.html
@@ -6,11 +6,14 @@
     <link href="log.css" rel="stylesheet"/>
     <script src="zone.js"></script>
     <script src="log.js"></script>
+    <script src="nav.js"></script>
 </head>
 <body>
-<a href="./index.html">< home</a>
+<script type="text/javascript">insertNavigation();</script>
+
 <h1>zone.js</h1>
 <h3>Log</h3>
+
 </body>
 <script type="text/javascript">
     {
